<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/mora"/>
        <EditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textColorHint="#ffffff"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="#ffffff"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/textInputEditTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/appButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorSelect"
            android:text="@string/text_register" />

        <TextView
            android:id="@+id/appTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Already a member? Login"
            android:textColor="@color/colorTextHint"
            android:textSize="16dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>